added decoder http interface
